public class Home extends Node {
    @Override
    public void addRoad(Road road) { super.addRoad(road); }
}
